--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ volumes:
 services:
 # mariaDB Container
   db:
-    image: mariadb:10.5
+    image: mariadb:10.11-rc
     restart: always
     command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW
     volumes:
