Update directory structure and volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     links:
       - db
     volumes:
-      - data:/data
+      - data:/app/data
     environment:
       - MYSQL_PASSWORD=psw
       - MYSQL_DATABASE=glpi
