Add MariaDB container healthcheck before start glpi container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,11 @@ services:
       - MYSQL_PASSWORD=psw
       - MYSQL_DATABASE=glpi
       - MYSQL_USER=user
+    healthcheck:
+      test: ["CMD", "/usr/local/bin/healthcheck.sh", "--connect"]
+      interval: 5s
+      timeout: 5s
+      retries: 3
 
 #GLPI Container
   app:
@@ -26,6 +31,9 @@ services:
     restart: always
     ports:
       - 80:80
+    depends_on:
+      db:
+        condition: service_healthy
     links:
       - db
     volumes:
